--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Arjun Hegde",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "express": "^4.16.3",
     "mobx": "^5.8.0",
